# hatch
# Ref: https://hatch.pypa.io/latest/config/metadata/
# ------------------------------------------------------------------------------

[project]
name = "oaipmh-scythe"
description = "A lightweight OAI client library for Python."
readme = "README.md"
keywords = [
  "oai",
  "oai-pmh",
]
license = "BSD-3-Clause"
authors = [
  { name = "Mathias Loesch"},
  { name = "Heinz-Alexander Fuetterer", email = "fuetterh@posteo.de" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Text Processing :: Markup :: XML",
]
dynamic = [
  "version",
]
dependencies = [
  "httpx>=0.25",
  "lxml~=4.9",
]
[project.optional-dependencies]
dev = [
  "oaipmh-scythe[lint]",
  "oaipmh-scythe[test]",
]
docs = [
  "mkdocs~=1.5",
  "mkdocs-include-markdown-plugin~=6.0",
  "mkdocs-material~=9.3",
  "mkdocstrings[python]~=0.23",
]
lint = [
  "mypy~=1.6",
  "pre-commit~=3.5",
]
test = [
  "pytest~=7.4",
  "pytest-cov~=4.1",
  "pytest-mock~=3.11",
  "pytest-randomly~=3.1",
  "pytest-recording~=0.13",
  "pytest-xdist~=3.3",
]
[project.urls]
changelog = "https://github.com/afuetterer/oaipmh-scythe/blob/master/CHANGELOG.md"
issues = "https://github.com/afuetterer/oaipmh-scythe/issues"
repository = "https://github.com/afuetterer/oaipmh-scythe.git"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oaipmh_scythe"]

[tool.hatch.version]
path = "src/oaipmh_scythe/__init__.py"

[tool.hatch.envs.default]
features = [
  "test",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov {args:src}"
cov-report-markdown = "python -m coverage report --format=markdown > coverage.md"
cov-summary-json = "python -m coverage json"
cov-total = """python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])""""

[tool.hatch.envs.lint]
features = [
  "lint",
]
[tool.hatch.envs.lint.scripts]
style = "pre-commit run --all-files --color=always"
typing = "mypy src tests"
all = [
  "style",
  # "typing",
]

[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --verbose"
serve = "mkdocs serve --verbose"
deploy = "mkdocs gh-deploy --force --verbose"

# black
# Ref: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
# ------------------------------------------------------------------------------

[tool.black]
target_version = ["py38", "py39", "py310", "py311", "py312"]
line-length = 120

# ruff
# Ref: https://beta.ruff.rs/docs/configuration/
# ------------------------------------------------------------------------------

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
unfixable = [
  "F401", # unused-import
]

[tool.ruff.isort]
known-first-party = ["oaipmh_scythe"]

# pytest
# Ref: https://docs.pytest.org/en/stable/customize.html
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = "tests"

# coverage.py
# Ref: https://coverage.readthedocs.io/en/latest/config.html
# ------------------------------------------------------------------------------

[tool.coverage.run]
branch = true
parallel = true
source = ["oaipmh_scythe"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
]
fail_under = 90
show_missing = true
skip_covered = true
skip_empty = true

# licensecheck
# Ref: https://github.com/FHPythonUtils/LicenseCheck/#example-1-pyprojecttoml
# ------------------------------------------------------------------------------

[tool.licensecheck]
using = "PEP631"
format = "ansi"
