# hatch
# Ref: https://hatch.pypa.io/latest/config/metadata/
# ------------------------------------------------------------------------------

[project]
name = "oaipmh-scythe"
description = "A lightweight OAI client library for Python."
readme = "README.md"
keywords = [
  "metadata",
  "oai-pmh",
  "oai-pmh-client",
]
license = "BSD-3-Clause"
authors = [
  { name = "Mathias Loesch"},
  { name = "Heinz-Alexander Fuetterer", email = "fuetterh@posteo.de" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Text Processing :: Markup :: XML",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "httpx>=0.25",
  "lxml~=4.9",
]
[project.optional-dependencies]
dev = [
  "oaipmh-scythe[lint]",
  "oaipmh-scythe[test]",
]
docs = [
  "mkdocs~=1.5",
  "mkdocs-include-markdown-plugin~=6.0",
  "mkdocs-material~=9.3",
  "mkdocstrings[python]~=0.23",
]
lint = [
  "pre-commit~=3.5",
]
test = [
  "pytest~=7.4",
  "pytest-cov~=4.1",
  "pytest-mock~=3.11",
  "pytest-randomly~=3.1",
  "pytest-recording~=0.13",
  "pytest-xdist~=3.3",
  "respx~=0.20",
]
[project.urls]
Changelog = "https://github.com/afuetterer/oaipmh-scythe/blob/main/CHANGELOG.md"
Documentation = "https://afuetterer.github.io/oaipmh-scythe"
Issues = "https://github.com/afuetterer/oaipmh-scythe/issues"
Repository = "https://github.com/afuetterer/oaipmh-scythe.git"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oaipmh_scythe"]

[tool.hatch.version]
path = "src/oaipmh_scythe/__about__.py"

[tool.hatch.envs.default]
features = [
  "test",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov {args:src}"
cov-report-markdown = "python -m coverage report --format=markdown > coverage.md"
cov-summary-json = "python -m coverage json"
cov-total = """
python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])"
"""

[tool.hatch.envs.lint]
features = [
  "lint",
]
[tool.hatch.envs.lint.scripts]
style = "SKIP=mypy pre-commit run --all-files --color=always"
typing = "pre-commit run --all-files --color=always mypy"
all = [
  "style",
  # "typing",
]

[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --config-file=docs/mkdocs.yml"
serve = "mkdocs serve --config-file=docs/mkdocs.yml"
deploy = "mkdocs gh-deploy --force --config-file=docs/mkdocs.yml"

# ruff
# Ref: https://beta.ruff.rs/docs/configuration/
# ------------------------------------------------------------------------------

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "D105", # undocumented-magic-method
  "D107", # undocumented-public-init
]
unfixable = [
  "F401", # unused-import
]

[tool.ruff.per-file-ignores]
"src/oaipmh_scythe/__about__.py" = [
  "D100", # undocumented-public-module
]
"tests/*" = [
  "D100", # undocumented-public-module
  "D103", # undocumented-public-function
]

[tool.ruff.isort]
known-first-party = ["oaipmh_scythe"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# pytest
# Ref: https://docs.pytest.org/en/stable/customize.html
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = "tests"

# coverage.py
# Ref: https://coverage.readthedocs.io/en/latest/config.html
# ------------------------------------------------------------------------------

[tool.coverage.run]
branch = true
parallel = true
source = ["oaipmh_scythe"]
omit = [
  "__about__.py",
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
fail_under = 90
show_missing = true
skip_covered = true
skip_empty = true

# mypy
# Ref: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
# ------------------------------------------------------------------------------

[tool.mypy]
python_version = "3.8"
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# licensecheck
# Ref: https://github.com/FHPythonUtils/LicenseCheck/#example-1-pyprojecttoml
# ------------------------------------------------------------------------------

[tool.licensecheck]
using = "PEP631"
format = "ansi"
